compiling_error.txt
/Users/alex/fye19/so much nonsense.cpp:16:1: error: unknown type name 'string'; did you mean 'std::string'?
string ans;
^~~~~~
std::string
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/iosfwd:194:65: note: 'std::string' declared here
typedef basic_string<char, char_traits<char>, allocator<char> > string;
                                                                ^
/Users/alex/fye19/so much nonsense.cpp:22:5: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
    cout<<"What's the value of the radius?";
    ^~~~
    std::cout
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/iostream:54:33: note: 'std::cout' declared here
extern _LIBCPP_FUNC_VIS ostream cout;
                                ^
/Users/alex/fye19/so much nonsense.cpp:23:5: error: use of undeclared identifier 'cin'; did you mean 'sin'?
    cin>>r;
    ^~~
    sin
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/math.h:986:1: note: 'sin' declared here
sin(_A1 __lcpp_x) _NOEXCEPT {return ::sin((double)__lcpp_x);}
^
/Users/alex/fye19/so much nonsense.cpp:23:5: error: reference to overloaded function could not be resolved; did you mean to call it?
    cin>>r;
    ^~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/math.h:986:1: note: possible target for call
sin(_A1 __lcpp_x) _NOEXCEPT {return ::sin((double)__lcpp_x);}
^
/Users/alex/fye19/so much nonsense.cpp:27:5: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
    cout<<fixed<<setprecision(2);
    ^~~~
    std::cout
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/iostream:54:33: note: 'std::cout' declared here
extern _LIBCPP_FUNC_VIS ostream cout;
                                ^
/Users/alex/fye19/so much nonsense.cpp:27:18: error: use of undeclared identifier 'setprecision'; did you mean 'std::setprecision'?
    cout<<fixed<<setprecision(2);
                 ^~~~~~~~~~~~
                 std::setprecision
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/iomanip:234:1: note: 'std::setprecision' declared here
setprecision(int __n)
^
/Users/alex/fye19/so much nonsense.cpp:27:11: error: use of undeclared identifier 'fixed'; did you mean 'std::fixed'?
    cout<<fixed<<setprecision(2);
          ^~~~~
          std::fixed
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ios:986:1: note: 'std::fixed' declared here
fixed(ios_base& __str)
^
/Users/alex/fye19/so much nonsense.cpp:28:5: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
    cout<<"The cirumference is "<<c<<"and the area is"<<a<<endl;
    ^~~~
    std::cout
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/iostream:54:33: note: 'std::cout' declared here
extern _LIBCPP_FUNC_VIS ostream cout;
                                ^
/Users/alex/fye19/so much nonsense.cpp:28:60: error: use of undeclared identifier 'endl'; did you mean 'std::endl'?
    cout<<"The cirumference is "<<c<<"and the area is"<<a<<endl;
                                                           ^~~~
                                                           std::endl
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:999:1: note: 'std::endl' declared here
endl(basic_ostream<_CharT, _Traits>& __os)
^
/Users/alex/fye19/so much nonsense.cpp:30:5: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
    cout<<"Would you like to calculate again? Yes or No ";
    ^~~~
    std::cout
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/iostream:54:33: note: 'std::cout' declared here
extern _LIBCPP_FUNC_VIS ostream cout;
                                ^
/Users/alex/fye19/so much nonsense.cpp:31:5: error: use of undeclared identifier 'cin'; did you mean 'sin'?
    cin>>ans;
    ^~~
    sin
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/math.h:986:1: note: 'sin' declared here
sin(_A1 __lcpp_x) _NOEXCEPT {return ::sin((double)__lcpp_x);}
^
/Users/alex/fye19/so much nonsense.cpp:31:5: error: reference to overloaded function could not be resolved; did you mean to call it?
    cin>>ans;
    ^~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/math.h:986:1: note: possible target for call
sin(_A1 __lcpp_x) _NOEXCEPT {return ::sin((double)__lcpp_x);}
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/istream:1506:1: note: candidate function [with _CharT = char, _Traits = std::__1::char_traits<char>, _Allocator = std::__1::allocator<char>] not viable: no overload of 'sin' matching 'basic_istream<char, std::__1::char_traits<char> > &' for 1st argument
operator>>(basic_istream<_CharT, _Traits>& __is,
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/istream:789:1: note: candidate template ignored: couldn't infer template argument '_Traits'
operator>>(basic_istream<char, _Traits>& __is, unsigned char* __s)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/istream:797:1: note: candidate template ignored: couldn't infer template argument '_Traits'
operator>>(basic_istream<char, _Traits>& __is, signed char* __s)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/istream:804:1: note: candidate template ignored: couldn't infer template argument '_Traits'
operator>>(basic_istream<_CharT, _Traits>& __is, _CharT& __c)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/istream:832:1: note: candidate template ignored: couldn't infer template argument '_Traits'
operator>>(basic_istream<char, _Traits>& __is, unsigned char& __c)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/istream:840:1: note: candidate template ignored: couldn't infer template argument '_Traits'
operator>>(basic_istream<char, _Traits>& __is, signed char& __c)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/istream:740:1: note: candidate template ignored: could not match '_CharT *' against 'std::string' (aka 'basic_string<char, char_traits<char>, allocator<char> >')
operator>>(basic_istream<_CharT, _Traits>& __is, _CharT* __s)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/istream:1638:1: note: candidate template ignored: could not match 'bitset' against 'basic_string'
operator>>(basic_istream<_CharT, _Traits>& __is, bitset<_Size>& __x)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/iomanip:302:1: note: candidate template ignored: could not match '__iom_t7' against 'basic_string'
operator>>(basic_istream<_CharT, _Traits>& __is, const __iom_t7<_MoneyT>& __x)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/iomanip:421:1: note: candidate template ignored: could not match '__iom_t9' against 'basic_string'
operator>>(basic_istream<_CharT, _Traits>& __is, const __iom_t9<_CharT>& __x)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/iomanip:602:33: note: candidate template ignored: could not match '__quoted_proxy' against 'basic_string'
basic_istream<_CharT, _Traits>& operator>>(
                                ^
/Users/alex/fye19/so much nonsense.cpp:32:22: error: expected ';' after do/while statement
  } while (ans!="No"):
                     ^
                     ;
13 errors generated.
